# fastapi-antigravity-template

./: .env.example  README.md  pyproject.toml
.agent/rules/: rules.md  standards.md
.agent/skills/fastapi-best-practices/: SKILL.md
.agent/skills/stop-slop/fastapi-best-practices/resources/: playbook.md
.agent/workflows/: check_lint.md  manage_dependencies.md  solve_issue.md
app/: main.py
app/api/v1/endpoints/: health.py
app/core/: config.py  database.py
tests/: conftest.py
